@@ -1,8 +1,8 @@
 DIST kadu-0.6.5.4.tar.bz2 1774602 RMD160 5656b87e02952e6d47159996c86919d5d16973e4 SHA1 afd5b7d6c1568a3db03328d58d5ba6506dfa410f SHA256 9decd7b9de6d91095b4f6b47bebbbbc5ca56b9ba6e8f6ee80d8ad172ba676d25
 DIST kadu-0.6.5.5.tar.bz2 1798992 RMD160 69cf1d9caefa5120ae6ca562372d76f54c0e1796 SHA1 a886f8d7d515bebac9f65de741600fd82625c59a SHA256 296bc38db1851d8dafc49f10f1a3f5a99d3ac5152299d311bc8aa56f1208bd60
 DIST kadu-0.9.0.tar.bz2 6412357 RMD160 ae520bf9e4cbda53086135c95167a5f0c1387545 SHA1 b0aaa92e8a23a1165f7aeec9205639c1edaf3625 SHA256 e9127264dedb81e4d351018c8227675a0d57dece5b8a6c9f76be9a94615e2294
-EBUILD kadu-phonon_sound-0.6.5.4.ebuild 373 RMD160 4509d8d0c2150a901ebf84ac4d06a42b8bde52ae SHA1 1d0a9168071d22a21fc52227f7da02e7fe3e35a5 SHA256 dd1ff9c0325722902e688fc5ed5f5c74c9285670a58fb4df8f90e8f5c39a8702
-EBUILD kadu-phonon_sound-0.6.5.5.ebuild 373 RMD160 c7e690d5792a288de9f6b590e49e4f279fc75a29 SHA1 d9257c3141b47a92ca3df49a508cac90fb64fffa SHA256 71cccdf8fadce3fc11158940a181c82c0349f2a1583e9210ff264d2983ad5753
-EBUILD kadu-phonon_sound-0.9.0.ebuild 373 RMD160 0441b3f98b8ec991ef5604627bb5148050065c78 SHA1 fedee7cd20ab5a3bdb39c6ecbb34824cd270b204 SHA256 2f25fab838201b77cc41688e62a1ffdbbb5bbae80c8c565242496471b289bf78
-MISC ChangeLog 4367 RMD160 8bd863d5bf3aabd7ba886b11d83524e3beeee26b SHA1 06cebf042ecbad3560e71e638a350bc621f35645 SHA256 15d7536732c2427eb175db74d10245d091e8e26b9dd050f43da78f259fc7f824
+EBUILD kadu-phonon_sound-0.6.5.4.ebuild 372 RMD160 55be92458d5ff3e2afab3ca9a4fdf970dd891502 SHA1 65a7a94e6ca96923cc2b98e3c73561492e74bae7 SHA256 77d8a0b3b7ac6496af126d0eddf89e92882c90ad4dddfedde92ba230b6b10048
+EBUILD kadu-phonon_sound-0.6.5.5.ebuild 372 RMD160 02bd5168d538f408814ae1e66ebd6713eea113ed SHA1 a5d4700d4134aeaf5ea085c8410e109fd1840bf3 SHA256 67e97fc8be6137ba6c197abf640f198c48484d2d2e565ce871326286a9104430
+EBUILD kadu-phonon_sound-0.9.0.ebuild 372 RMD160 4c63fa134a506ba264cea1ff07fefe04d73a82f0 SHA1 1168175b917a2feefc24a1bb2fb77575079e2431 SHA256 af928cb825c0aafd47c0929813052d53dfe0c829b52b87621003b83a55a91d9a
+MISC ChangeLog 4543 RMD160 dfa6a7fd17896bccb38b3742545eb37b4c373ee3 SHA1 a7bfd0ee862858658c4571e586d19fb07e6bdd64 SHA256 2fa52d5545b0cbbdea716002dd75ab1faa0dd15bbe3220d7cb86d7c1b9d2c99d
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
