@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Mar 2011; Michał Ziąbkowski <mziab@o2.pl>
+  kadu-phonon_sound-0.6.5.4.ebuild, kadu-phonon_sound-0.6.5.5.ebuild,
+  kadu-phonon_sound-0.9.0.ebuild:
+  Updated phonon dep.
+
 *kadu-phonon_sound-0.9.0 (19 Mar 2011)
 
   19 Mar 2011; Michał Ziąbkowski <mziab@o2.pl>
